--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: open_fashion
-description: A 
+description: Open Fashion is a free eCommerce UI 
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,6 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  google_fonts: ^3.0.1
+
+  intl: ^0.17.0
+  dio: ^4.0.6
+  provider: ^6.0.3
+
+  logger: ^1.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +46,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_name: ^0.0.1
+  flutter_lints: ^2.0.1
+
+flutter_launcher_name:
+  name: "Open Fashion"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
