--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 
   google_fonts: ^3.0.1
 
+  flutter_svg: ^1.1.4
+
   intl: ^0.17.0
   dio: ^4.0.6
   provider: ^6.0.3
@@ -72,7 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
