--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^4.0.6
   provider: ^6.0.3
 
+  loading_indicator: ^3.1.0
+
   logger: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
