--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.17.0
   dio: ^4.0.6
   provider: ^6.0.3
+  flutter_secure_storage: ^5.0.2
 
   loading_indicator: ^3.1.0
 
