--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ ignore/**
 .vscode/**
 
 outputs/
+
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+ios/firebase_app_id_file.json
+lib/firebase_options.dart
+
+storage/
