--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.8.0
   firebase_storage: ^11.0.16
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
